[package]
name = "akaze"
version = "0.7.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2021"
description = "AKAZE feature extraction algorithm for computer vision"
keywords = ["keypoint", "descriptor", "vision", "sfm", "slam"]
categories = ["computer-vision", "science::robotics"]
repository = "https://github.com/rust-cv/akaze"
documentation = "https://docs.rs/akaze/"
license = "MIT"
readme = "README.md"

[dependencies]
cv-core = "0.15.0"
image = { version = "0.25.5", default-features = false }
log = { version = "0.4.8", default-features = false }
primal = { version = "0.3.0", default-features = false }
derive_more = { version = "1.0.0", features = ["full"] }
nshare = { version = "0.10.0", features = ["ndarray", "image"] }
ndarray = { version = "0.16.1", default-features = false }
float-ord = { version = "0.3.2", default-features = false }
space = "0.18.0"
bitarray = { version = "0.10.0", features = ["space"] }


[dev-dependencies]
eight-point = "0.8.0"
cv-pinhole = "0.6.0"
arrsac = "0.10.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
criterion = "0.5.1"
pretty_env_logger = "0.5.0"
image = "0.25.5"

[[bench]]
name = "criterion"
harness = false

[profile.dev]
# The tests take a very long time without optimization.
opt-level = 3

[profile.bench]
# Necessary to generate flamegraphs
debug = true
codegen-units = 1
